# titancore

./: Cargo.toml  Dockerfile  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/client/: client.rs
crates/core/src/crypto/: defines.rs  error.rs  macros.rs  mod.rs  srp6.rs
crates/core/src/packets/: auth.rs  mod.rs  packet.rs
crates/core/src/platform/: mod.rs  signal.rs
crates/core/src/server/: client.rs  messages.rs  mod.rs  server.rs
crates/server-auth/src/: handler.rs  main.rs
crates/tc-core/: Cargo.toml
crates/tc-core/src/: lib.rs
crates/tc-core/src/crypto/: defines.rs  srp6.rs
crates/tc-core/src/database/: cache.rs  connection.rs  db.rs  error.rs  migration.rs  mod.rs  pool.rs  transaction.rs
crates/tc-core/src/platform/: signal.rs
crates/tc-core/src/server/: client.rs  connection.rs  context.rs  mod.rs  packet.rs  server.rs
crates/tc-server-api/: Cargo.toml
crates/tc-server-api/src/: cli.rs  error.rs  global_handlers.rs  main.rs  sql.rs
crates/tc-server-api/src/routes/: account.rs  index.rs
crates/tc-server-auth/: Cargo.toml
crates/tc-server-auth/migrations/: 20251208002817_base_migration.sql
crates/tc-server-auth/src/: handler.rs  main.rs  opcode.rs  packets.rs
crates/testing/: Cargo.toml
crates/testing/src/: main.rs
crates/tool-db-migrator/: Cargo.toml
crates/tool-db-migrator/src/: cli.rs  db.rs  main.rs
crates/tool-map-extractor/: Cargo.toml
crates/tool-mmap-generator/: Cargo.toml
crates/tool-vmap-extractor/: Cargo.toml
script/: bump-version.sh
servers/auth/: Cargo.toml
servers/auth/src/: main.rs
servers/world/: Cargo.toml
