[workspace]
resolver = "3"
members = ["crates/tc-core","crates/tc-server-auth", "crates/tc-server-world", "crates/tool-db-migrator", "crates/tool-map-extractor", "crates/tool-mmap-generator", "crates/tool-vmap-extractor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.1"
