[package]
name = "tc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bincode = "2.0.1"
hex = "0.4.3"
hmac = "0.12.1"
num = {version="0.4.3", features=["num-bigint"]}
rc4 = "0.1.0"
serde = "1.0.228"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1.41"
