[package]
name = "tc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bincode = "2.0.1"
chrono = "0.4.42"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
num = {version="0.4.3", features=["num-bigint"]}
rand = {version="0.9.2", features=["std", "std_rng"]}
rc4 = "0.1.0"
serde = "1.0.228"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = {version="1.48.0", features=["full"]}
tokio-postgres = {version="0.7.15", features=["with-chrono-0_4"]}
tracing = "0.1.41"
