[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = {version="4.5.53", features=["cargo", "derive", "env"]}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
tc-core = {path="../tc-core"}
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
