[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
tc-core = {path="../../crates/tc-core"}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bincode = "2.0.1"
async-trait = "0.1.89"
anyhow = "1.0.100"
thiserror = "2.0.17"
