[package]
name = "db-migrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = {version="4.5.53", features=["cargo", "derive", "env"]}
tc-core = {path="../tc-core"}
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.7"
